# modeller

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSOIL.cmake
configuration/: root_directory.h.in
include/: camera.h  filesystem.h  mesh.h  model.h
src/: main.cpp
